# CMakeVersionInfo

./: .gitignore  CMakeLists.txt  CMakeVersionInfo.cpp  CMakeVersionInfo.h  GenerateVersionInfo.cmake  LICENSE  README.md  msvc2022-build.bat
